--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.7.2",
     "antd": "^5.11.0",
+    "dayjs": "^1.11.10",
     "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
