--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,56 +30,44 @@
     "react/react-in-jsx-scope": "off",
     "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "object-shorthand": ["error", "always"],
-    /*
-     * CN Sonar Rules: BLOCKER
-     */
-    "use-isnan": "error", // S2688
-    "no-labels": "error", // S1219
-    "no-fallthrough": "error", // S128
-    /*
-     * CN Sonar Rules: CRITICAL
-     */
-    "no-unsafe-finally": "error", // S1143
-    "default-case": "error", // S131
-    "no-octal": "error", // S1314
-    "vars-on-top": "error", // S1526
-    "no-self-assign": "error", // S1656
-    "no-dupe-else-if": "error", // S1862
-    "no-duplicate-case": "error", // S1862
-    "no-unmodified-loop-condition": "error", // S1994
-    "for-direction": "error", // S2251
-    "no-global-assign": "error", // S2424
-    "no-var": "error", // S3504
-    "no-unsafe-negation": "error", // S3812
-    "constructor-super": "error", // S3854
-    "default-case-last": "error", // S4524
-    /*
-     * CN Sonar Rules: MAJOR + BUG
-     */
-    "no-bitwise": "warn", // S1529
-    "no-unreachable-loop": "warn", // S1751
-    "no-unreachable": "warn", // S1763
-    "no-unused-expressions": "warn", // S2123
-    "require-yield": "warn", // S3531
-    "no-empty-pattern": "warn", // S3799
-    /*
-     * CN Sonar Rules: MAJOR + CODE SMELL
-     */
-    "no-lone-blocks": "warn", // S108
-    "no-shadow-restricted-names": "warn", // S1117 (no-shadow -> not used cause it cannot ignore enums!)
-    "no-throw-literal": "warn", // S3696
-    "no-console": "warn", // S106
-    "no-sparse-arrays": "warn", // S4140
-    "no-caller": "warn", // S2685
-    "no-extra-label": "warn", // S1439
-    "default-param-last": "warn", // S1788
-    "max-lines": ["warn", 1000], // S104
-    "max-params": ["warn", 7], // S107
-    "max-depth": ["warn", 5], // S134
+    "use-isnan": "error",
+    "no-labels": "error",
+    "no-fallthrough": "error",
+    "no-unsafe-finally": "error",
+    "default-case": "error",
+    "no-octal": "error",
+    "vars-on-top": "error",
+    "no-self-assign": "error",
+    "no-dupe-else-if": "error",
+    "no-duplicate-case": "error",
+    "no-unmodified-loop-condition": "error",
+    "for-direction": "error",
+    "no-global-assign": "error",
+    "no-var": "error",
+    "no-unsafe-negation": "error",
+    "constructor-super": "error",
+    "default-case-last": "error",
+    "no-bitwise": "warn",
+    "no-unreachable-loop": "warn",
+    "no-unreachable": "warn",
+    "no-unused-expressions": "warn",
+    "require-yield": "warn",
+    "no-empty-pattern": "warn",
+    "no-lone-blocks": "warn",
+    "no-shadow-restricted-names": "warn",
+    "no-throw-literal": "warn",
+    "no-console": "warn",
+    "no-sparse-arrays": "warn",
+    "no-caller": "warn",
+    "no-extra-label": "warn",
+    "default-param-last": "warn",
+    "max-lines": ["warn", 1000],
+    "max-params": ["warn", 7],
+    "max-depth": ["warn", 5],
     "max-lines-per-function": [
       "warn",
       { "max": 200, "skipBlankLines": true, "skipComments": true }
-    ], // S138
-    "complexity": ["warn", 15] // S3776
+    ],
+    "complexity": ["warn", 15]
   }
 }
