--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.7.2",
+    "@types/node": "^20.9.0",
     "antd": "^5.11.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.6.0",
