--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.7.2",
-    "@types/node": "^20.9.0",
     "antd": "^5.11.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.6.0",
@@ -21,6 +20,7 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
